webots_ros2_brick/log/build_2024-05-07_21-25-03/webots_ros2_brick/stderr.log
  File "/home/ferre/brick/BRICK-WEBots/webots_ros2_brick/install/webots_ros2_brick/lib/python3.10/site-packages/webots_ros2_brick/robotcontroller.py", line 189
    if()
        ^
SyntaxError: expected ':'

